@@ -28,10 +28,15 @@
             "rct2.scenery_small.pirroof2",
             "$DAT:09F55801|TTPRFA01",
             "toontowner.scenery_small.ttpirf02",
+            "fidwell.scenery_small.ttpirf02",
             "toontowner.scenery_small.ttpirf03",
+            "fidwell.scenery_small.ttpirf03",
             "toontowner.scenery_small.ttpirf04",
+            "fidwell.scenery_small.ttpirf04",
             "toontowner.scenery_small.ttpirf07",
+            "fidwell.scenery_small.ttpirf07",
             "toontowner.scenery_small.ttpirf08",
+            "fidwell.scenery_small.ttpirf08",
             "rct2.scenery_wall.wallpr34",
             "$DAT:0C58B503|ETHCLR21",
             "$DAT:00000003|ACWPC32 ",
