@@ -29,6 +29,11 @@
 - New object: Roof (toontowner.scenery_small.ttrfwd06)
 - New object: Roof (toontowner.scenery_small.ttrfwd07)
 - New object: Roof (toontowner.scenery_small.ttrfwd08)
+- New object: Roof (toontowner.scenery_small.ttpirf02)
+- New object: Roof (toontowner.scenery_small.ttpirf03)
+- New object: Roof (toontowner.scenery_small.ttpirf04)
+- New object: Roof (toontowner.scenery_small.ttpirf07)
+- New object: Roof (toontowner.scenery_small.ttpirf08)
 - New object: Football (rct2.scenery_small.ball3)
 - New object: Vine Tree (rct2ww.scenery_small.1x1atre2)
 - New object: Roman Palace Corner Piece (rct2tt.scenery_large.corns2x2)
